# EdgeCortex

./: .gitignore  CMakeLists.txt  README.md
docker/: Dockerfile.release
include/edgecortex/: allocator.hpp  ops.hpp
python/benchmarks/: benchmark_gemm.py
python/edge_cortex/: __init__.py
python/tests/: test_inference.py
src/: allocator.cpp  bindings.cpp  ops.cpp
tests/: CMakeLists.txt  test_allocator.cpp
